// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en <GifItem /> Debe de mostrar el componente correctamente 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Goku"
      src="https://media.giphy.com/media/CY3A9zOlZR8uhFbeok/giphy.gif"
    />
    <p>
      Titulo del GIF
    </p>
  </div>
</div>
`;

exports[`Prueba en <GifItem /> Debe hacer match con el snapshot 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Goku"
      src="https://media.giphy.com/media/CY3A9zOlZR8uhFbeok/giphy.gif"
    />
    <p>
      Goku
    </p>
  </div>
</div>
`;
